--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+/*         _______    ___    _____  __   __ __    __         */
+/*         |      \   |  |  /  ___\ | | / / \ \  / /         */
+/*         |  |>  |   |  |  | /     | |/ /   \ \/ /          */
+/*         |      /   |  |  | |     |   <     \  /           */
+/*         |  |\  \   |  |  | \____ | |\ \    / /            */
+/*         |__| \__\  |__|  \_____/ |_| \_\  /_/             */
+/*                                                           */
+
+
 /* /* https://github.com/Ricky-bruh/DSInvalidGiftCode  */
 
  /* Completely made by:  */
  /* https://github.com/Ricky-bruh */
- /* and https://github.com/Fgamervisa */
+ /* and https://github.com/Fgamervisa   */
 
 body {
     background-image: url('bg.png');
